language/move-lang/tests/move_check/parser/comments_unbalanced.move
/// This is a test.
module M {
    /** This comment must be closed.
    fun f() { }
}
